--- a/excel_analysis.ipynb
+++ b/excel_analysis.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "4c0c6a6d",
+   "metadata": {},
+   "source": [
+    "## 1. Load & clean data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 82,
    "id": "3b75e144",
    "metadata": {},
    "outputs": [],
@@ -16,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 83,
    "id": "82b74470",
    "metadata": {},
    "outputs": [],
@@ -27,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 84,
    "id": "2895cbb0",
    "metadata": {},
    "outputs": [],
@@ -56,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 86,
    "id": "5ab042d7",
    "metadata": {},
    "outputs": [
@@ -487,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 87,
    "id": "fbfd27a7",
    "metadata": {},
    "outputs": [
@@ -539,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 88,
    "id": "f286c603",
    "metadata": {},
    "outputs": [
@@ -573,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 89,
    "id": "31f5f10a",
    "metadata": {},
    "outputs": [
@@ -610,48 +618,35 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c1bfc311",
-   "metadata": {
-    "vscode": {
-     "languageId": "ini"
-    }
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "id": "8bf251d0",
+   "metadata": {},
    "source": [
-    "\n",
-    "# 1. تحديد وتحويل الأعمدة المهمة (Feature Engineering)\n",
-    "# مثال: تحويل الأسعار إلى أرقام، استخراج معلومات من النصوص، إلخ\n",
-    "\n",
-    "# تحويل الأعمدة الرقمية من نص إلى رقم\n",
-    "df['discounted_price'] = pd.to_numeric(df['discounted_price'].str.replace(',', ''), errors='coerce')\n",
-    "df['actual_price'] = pd.to_numeric(df['actual_price'].str.replace(',', ''), errors='coerce')\n",
-    "df['rating'] = pd.to_numeric(df['rating'], errors='coerce')\n",
-    "df['rating_count'] = pd.to_numeric(df['rating_count'].str.replace(',', ''), errors='coerce')\n",
-    "\n",
-    "# 2. تحليل البيانات بشكل أعمق (تحليل توزيعات، علاقات، إلخ)\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "# مثال: توزيع الأسعار\n",
-    "plt.figure(figsize=(8,4))\n",
-    "sns.histplot(df['discounted_price'].dropna(), bins=30)\n",
-    "plt.title('Distribution of Discounted Price')\n",
-    "plt.xlabel('Discounted Price')\n",
-    "plt.show()\n",
-    "\n",
-    "# مثال: علاقة السعر بالتقييم\n",
-    "plt.figure(figsize=(8,4))\n",
-    "sns.scatterplot(x='discounted_price', y='rating', data=df)\n",
-    "plt.title('Price vs Rating')\n",
-    "plt.xlabel('Discounted Price')\n",
-    "plt.ylabel('Rating')\n",
-    "plt.show()\n",
-    "\n",
-    "# 3. استخراج رؤى أولية (Insights)\n",
-    "# مثال: المنتجات الأعلى تقييماً أو الأكثر مبيعاً\n",
-    "top_rated = df.sort_values('rating', ascending=False).head(10)\n",
-    "display(top_rated[['product_name', 'rating', 'discounted_price', 'rating_count']])"
+    "## 2. EDA"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35d87682",
+   "metadata": {},
+   "source": [
+    "## 3. Feature Engineering"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d07e4a4",
+   "metadata": {},
+   "source": [
+    "## 4. Sentiment Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "917f935d",
+   "metadata": {},
+   "source": [
+    "## 5. Visualization"
    ]
   }
  ],
