--- a/excel_analysis.ipynb
+++ b/excel_analysis.ipynb
@@ -622,7 +622,7 @@
    "id": "8bf251d0",
    "metadata": {},
    "source": [
-    "## 2. EDA"
+    "## 2. EDA (Exploratory Data Analysis)"
    ]
   },
   {
