--- a/excel_analysis.ipynb
+++ b/excel_analysis.ipynb
@@ -627,10 +627,76 @@
   },
   {
    "cell_type": "markdown",
+   "id": "96591fac",
+   "metadata": {},
+   "source": [
+    "#### 2.1 Numerical columns analysis: discounted_price, actual_price, discount_percentage, rating, rating_count."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6bc95f24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Summary statistics\n",
+    "print(df[['discounted_price', 'actual_price', 'discount_percentage', 'rating', 'rating_count']].describe())\n",
+    "\n",
+    "# Top selling products (by rating_count or revenue)\n",
+    "df['revenue'] = df['discounted_price'] * df['rating_count']\n",
+    "top_sales = df.sort_values(by='revenue', ascending=False).head(10)\n",
+    "print(top_sales[['product_name', 'revenue', 'rating_count', 'discounted_price']])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b84587dd",
+   "metadata": {},
+   "source": [
+    "#### 2.2 Categorical analysis: category"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "46c58df3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Count products per category\n",
+    "category_counts = df['category'].value_counts()\n",
+    "print(category_counts.head(10))\n",
+    "\n",
+    "# If categories are separated by \">\"\n",
+    "df['main_category'] = df['category'].apply(lambda x: x.split(\">\")[0].strip())\n",
+    "main_category_counts = df['main_category'].value_counts()\n",
+    "print(main_category_counts)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "35d87682",
    "metadata": {},
    "source": [
     "## 3. Feature Engineering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9836bd06",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Discount as boolean flag\n",
+    "df['has_discount'] = df['discount_percentage'] > 0\n",
+    "\n",
+    "# Review length\n",
+    "df['review_length'] = df['review_content'].apply(lambda x: len(str(x).split()))\n",
+    "\n",
+    "# Product popularity score\n",
+    "df['popularity'] = df['rating'] * df['rating_count']\n"
    ]
   },
   {
@@ -643,11 +709,47 @@
   },
   {
    "cell_type": "markdown",
+   "id": "20312407",
+   "metadata": {},
+   "source": [
+    "Using a Hugging Face pretrained model (distilbert-base-uncased-finetuned-sst-2-english):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c25b1d4e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import pipeline\n",
+    "\n",
+    "# Sentiment analysis pipeline\n",
+    "sentiment_model = pipeline(\"sentiment-analysis\")\n",
+    "\n",
+    "# Apply sentiment analysis to reviews\n",
+    "df['review_sentiment'] = df['review_content'].astype(str).apply(lambda x: sentiment_model(x)[0]['label'])\n",
+    "df['sentiment_score'] = df['review_content'].astype(str).apply(lambda x: sentiment_model(x)[0]['score'])\n",
+    "\n",
+    "# Check sentiment distribution\n",
+    "print(df['review_sentiment'].value_counts())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "917f935d",
    "metadata": {},
    "source": [
     "## 5. Visualization"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6023d7a3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
