--- a/excel_analysis.ipynb
+++ b/excel_analysis.ipynb
@@ -749,7 +749,21 @@
    "id": "6023d7a3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "# Top 10 products by revenue\n",
+    "plt.figure(figsize=(10,6))\n",
+    "sns.barplot(x='revenue', y='product_name', data=top_sales)\n",
+    "plt.title(\"Top 10 Products by Revenue\")\n",
+    "plt.show()\n",
+    "\n",
+    "# Sentiment distribution\n",
+    "sns.countplot(x='review_sentiment', data=df)\n",
+    "plt.title(\"Review Sentiment Distribution\")\n",
+    "plt.show()\n"
+   ]
   }
  ],
  "metadata": {
