--- a/excel_analysis.ipynb
+++ b/excel_analysis.ipynb
@@ -762,7 +762,7 @@
     "# Sentiment distribution\n",
     "sns.countplot(x='review_sentiment', data=df)\n",
     "plt.title(\"Review Sentiment Distribution\")\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   }
  ],
