--- a/excel_analysis.ipynb
+++ b/excel_analysis.ipynb
@@ -635,10 +635,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "id": "6bc95f24",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       discounted_price   actual_price  discount_percentage       rating  \\\n",
+      "count       1465.000000    1465.000000          1465.000000  1465.000000   \n",
+      "mean        3125.310874    5444.990635             0.476915     4.096587   \n",
+      "std         6944.304394   10874.826864             0.216359     0.291574   \n",
+      "min           39.000000      39.000000             0.000000     2.000000   \n",
+      "25%          325.000000     800.000000             0.320000     4.000000   \n",
+      "50%          799.000000    1650.000000             0.500000     4.100000   \n",
+      "75%         1999.000000    4295.000000             0.630000     4.300000   \n",
+      "max        77990.000000  139900.000000             0.940000     5.000000   \n",
+      "\n",
+      "        rating_count  \n",
+      "count    1465.000000  \n",
+      "mean    18277.634812  \n",
+      "std     42727.398216  \n",
+      "min         2.000000  \n",
+      "25%      1191.000000  \n",
+      "50%      5179.000000  \n",
+      "75%     17325.000000  \n",
+      "max    426973.000000  \n",
+      "                                          product_name       revenue  \\\n",
+      "370  Redmi 9 Activ (Carbon Black, 4GB RAM, 64GB Sto...  2.667292e+09   \n",
+      "566  Redmi 9A Sport (Coral Green, 3GB RAM, 32GB Sto...  2.353426e+09   \n",
+      "371  Redmi 9A Sport (Coral Green, 2GB RAM, 32GB Sto...  2.039620e+09   \n",
+      "473  Redmi 9A Sport (Carbon Black, 2GB RAM, 32GB St...  2.039594e+09   \n",
+      "124  Redmi 126 cm (50 inches) 4K Ultra HD Android S...  1.492809e+09   \n",
+      "72   Redmi 108 cm (43 inches) 4K Ultra HD Android S...  1.221381e+09   \n",
+      "568  Samsung Galaxy S20 FE 5G (Cloud Navy, 8GB RAM,...  1.055742e+09   \n",
+      "332  MI 138.8 cm (55 inches) 5X Series 4K Ultra HD ...  9.988227e+08   \n",
+      "91   OnePlus 108 cm (43 inches) Y Series Full HD Sm...  8.724401e+08   \n",
+      "197  MI 108 cm (43 inches) 5A Series Full HD Smart ...  8.209672e+08   \n",
+      "\n",
+      "     rating_count  discounted_price  \n",
+      "370      313836.0            8499.0  \n",
+      "566      313832.0            7499.0  \n",
+      "371      313836.0            6499.0  \n",
+      "473      313832.0            6499.0  \n",
+      "124       45238.0           32999.0  \n",
+      "72        45238.0           26999.0  \n",
+      "568       27790.0           37990.0  \n",
+      "332       21252.0           46999.0  \n",
+      "91        34899.0           24999.0  \n",
+      "197       32840.0           24999.0  \n"
+     ]
+    }
+   ],
    "source": [
     "# Summary statistics\n",
     "print(df[['discounted_price', 'actual_price', 'discount_percentage', 'rating', 'rating_count']].describe())\n",
@@ -659,17 +708,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "id": "46c58df3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "category\n",
+      "Computers&Accessories|Accessories&Peripherals|Cables&Accessories|Cables|USBCables                        233\n",
+      "Electronics|WearableTechnology|SmartWatches                                                               76\n",
+      "Electronics|Mobiles&Accessories|Smartphones&BasicMobiles|Smartphones                                      68\n",
+      "Electronics|HomeTheater,TV&Video|Televisions|SmartTelevisions                                             63\n",
+      "Electronics|Headphones,Earbuds&Accessories|Headphones|In-Ear                                              52\n",
+      "Electronics|HomeTheater,TV&Video|Accessories|RemoteControls                                               49\n",
+      "Home&Kitchen|Kitchen&HomeAppliances|SmallKitchenAppliances|MixerGrinders                                  27\n",
+      "Electronics|HomeTheater,TV&Video|Accessories|Cables|HDMICables                                            24\n",
+      "Home&Kitchen|Kitchen&HomeAppliances|Vacuum,Cleaning&Ironing|Irons,Steamers&Accessories|Irons|DryIrons     24\n",
+      "Computers&Accessories|Accessories&Peripherals|Keyboards,Mice&InputDevices|Mice                            24\n",
+      "Name: count, dtype: int64\n",
+      "main_category\n",
+      "Electronics              526\n",
+      "Computers&Accessories    453\n",
+      "Home&Kitchen             448\n",
+      "OfficeProducts            31\n",
+      "MusicalInstruments         2\n",
+      "HomeImprovement            2\n",
+      "Toys&Games                 1\n",
+      "Car&Motorbike              1\n",
+      "Health&PersonalCare        1\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
     "# Count products per category\n",
     "category_counts = df['category'].value_counts()\n",
     "print(category_counts.head(10))\n",
     "\n",
     "# If categories are separated by \">\"\n",
-    "df['main_category'] = df['category'].apply(lambda x: x.split(\">\")[0].strip())\n",
+    "df['main_category'] = df['category'].apply(lambda x: x.split(\"|\")[0].strip())\n",
     "main_category_counts = df['main_category'].value_counts()\n",
     "print(main_category_counts)\n"
    ]
@@ -684,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "id": "9836bd06",
    "metadata": {},
    "outputs": [],
@@ -720,19 +799,39 @@
    "execution_count": null,
    "id": "c25b1d4e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "No model was supplied, defaulted to distilbert/distilbert-base-uncased-finetuned-sst-2-english and revision 714eb0f (https://huggingface.co/distilbert/distilbert-base-uncased-finetuned-sst-2-english).\n",
+      "Using a pipeline without specifying a model name and revision in production is not recommended.\n",
+      "Device set to use cpu\n"
+     ]
+    }
+   ],
    "source": [
     "from transformers import pipeline\n",
     "\n",
     "# Sentiment analysis pipeline\n",
     "sentiment_model = pipeline(\"sentiment-analysis\")\n",
     "\n",
-    "# Apply sentiment analysis to reviews\n",
-    "df['review_sentiment'] = df['review_content'].astype(str).apply(lambda x: sentiment_model(x)[0]['label'])\n",
-    "df['sentiment_score'] = df['review_content'].astype(str).apply(lambda x: sentiment_model(x)[0]['score'])\n",
+    "# Function to handle long reviews safely\n",
+    "def get_sentiment(text):\n",
+    "    text = str(text).strip()\n",
+    "    if not text:   # Handle empty reviews\n",
+    "        return {\"label\": \"NEUTRAL\", \"score\": 0.0}\n",
+    "    # Truncate to 512 characters (safe for most transformer models)\n",
+    "    result = sentiment_model(text[:512])[0]\n",
+    "    return result\n",
+    "\n",
+    "# Apply safely\n",
+    "df['review_sentiment'] = df['review_content'].apply(lambda x: get_sentiment(x)['label'])\n",
+    "df['sentiment_score']  = df['review_content'].apply(lambda x: get_sentiment(x)['score'])\n",
     "\n",
     "# Check sentiment distribution\n",
-    "print(df['review_sentiment'].value_counts())\n"
+    "print(df['review_sentiment'].value_counts())\n",
+    "\n"
    ]
   },
   {
