--- a/excel_analysis.ipynb
+++ b/excel_analysis.ipynb
@@ -894,6 +894,36 @@
     "plt.title(\"Review Sentiment Distribution\")\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6643789b",
+   "metadata": {},
+   "source": [
+    "#### 6. Save Processed Data for Chatbot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "4d771372",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processed data saved as processed_data.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "# =========================================\n",
+    "# Save Processed Data for Chatbot\n",
+    "# =========================================\n",
+    "df.to_csv(\"data/processed_data.csv\", index=False)\n",
+    "print(\"Processed data saved as processed_data.csv\")"
+   ]
   }
  ],
  "metadata": {
