--- a/excel_analysis.ipynb
+++ b/excel_analysis.ipynb
@@ -778,6 +778,69 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "70371d91",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Price Tier distribution:\n",
+      " price_tier\n",
+      "Budget       370\n",
+      "Mid-Range    369\n",
+      "Premium      364\n",
+      "Luxury       362\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Discount Level distribution:\n",
+      " discount_level\n",
+      "No/Low Discount    1465\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Review length min/max: 11 2974\n",
+      "Popularity min/max: 0.0 1878681.2\n",
+      "\n",
+      "Products with unusually short reviews:\n",
+      " Empty DataFrame\n",
+      "Columns: [product_id, product_name, category, discounted_price, actual_price, discount_percentage, rating, rating_count, about_product, user_id, user_name, review_id, review_title, review_content, img_link, product_link, has_discount, review_length, popularity, price_tier, discount_level, cleaned_review, review_sentiment, sentiment_score, sentiment_numerical, main_category, revenue]\n",
+      "Index: []\n",
+      "\n",
+      "Products with extreme popularity:\n",
+      "      product_id                                                                         product_name                                                        category  discounted_price  actual_price  discount_percentage  rating  rating_count                                                                                                                                                                                            about_product                                                                                                                                                                                                  user_id                                                                                                          user_name                                                                                                              review_id  \\\n",
+      "47   B014I8SSD0  Amazon Basics High-Speed HDMI Cable, 6 Feet - Supports Ethernet, 3D, 4K video,Black  Electronics|HomeTheater,TV&Video|Accessories|Cables|HDMICables             309.0         475.0                 0.35     4.4        426973  Please select appropriate display resolution & refresh rate for proper display output. HDMI A Male to A Male Cable: Supports Ethernet, 3D, 4K video and Audio Return Channel (ARC)|Connects Blu-ray ...  AEYJ5I6JZZPOJB6MGWRQOHRQLPSQ,AFY5TVFOMVHGBPBTIJODYDQRZM5Q,AE3O6366WGEQAANKJ76QETTUQQTQ,AEQIJCPWSBCDKUO5VROXXHWX3PPA,AGVIAQK2HQ47P7UVXHW2NBAEU7YQ,AE3D5CJ2GDUP5SQ3AAYMVAGDTX7A,AH77IQRYD54XCRMCO7XEAI...  Rishav Gossain,Shashank Mallamraju,Purnendu,gunasekaran desomayananam,Anto RK,Sukrit Basak,Manoj Kumar,Sethuram.S  R1FKOKZ3HHKJBZ,R2WNMZI1EXTA0H,RCA1M3W4RIXUR,R3BKCLL6D7ZLIX,REVSR0ILY3547,R15W5KMQB95IV5,R10PB68FRUHT5V,R3TLCE9JSBU3UP   \n",
+      "65   B014I8SX4Y                           Amazon Basics High-Speed HDMI Cable, 6 Feet (2-Pack),Black  Electronics|HomeTheater,TV&Video|Accessories|Cables|HDMICables             309.0        1400.0                 0.78     4.4        426973  HDMI A Male to A Male Cable: Supports Ethernet, 3D, 4K video and Audio Return Channel (ARC)|Connects Blu-ray players, Fire TV, Apple TV, PS4, PS3, XBox one, Xbox 360, computers and other HDMI-enab...  AEYJ5I6JZZPOJB6MGWRQOHRQLPSQ,AFY5TVFOMVHGBPBTIJODYDQRZM5Q,AE3O6366WGEQAANKJ76QETTUQQTQ,AEQIJCPWSBCDKUO5VROXXHWX3PPA,AGVIAQK2HQ47P7UVXHW2NBAEU7YQ,AE3D5CJ2GDUP5SQ3AAYMVAGDTX7A,AH77IQRYD54XCRMCO7XEAI...  Rishav Gossain,Shashank Mallamraju,Purnendu,gunasekaran desomayananam,Anto RK,Sukrit Basak,Manoj Kumar,Sethuram.S  R1FKOKZ3HHKJBZ,R2WNMZI1EXTA0H,RCA1M3W4RIXUR,R3BKCLL6D7ZLIX,REVSR0ILY3547,R15W5KMQB95IV5,R10PB68FRUHT5V,R3TLCE9JSBU3UP   \n",
+      "12   B07KSMBL2H            AmazonBasics Flexible Premium HDMI Cable (Black, 4K@60Hz, 18Gbps), 3-Foot  Electronics|HomeTheater,TV&Video|Accessories|Cables|HDMICables             219.0         700.0                 0.69     4.4        426973  Flexible, lightweight HDMI cable for connecting media devices to playback display such as HDTVs, projectors, and more|Compatible with Blu-Ray players, computers, Apple TV, Roku, cable, PS4, Xbox O...  AEYJ5I6JZZPOJB6MGWRQOHRQLPSQ,AFY5TVFOMVHGBPBTIJODYDQRZM5Q,AE3O6366WGEQAANKJ76QETTUQQTQ,AEQIJCPWSBCDKUO5VROXXHWX3PPA,AGVIAQK2HQ47P7UVXHW2NBAEU7YQ,AE3D5CJ2GDUP5SQ3AAYMVAGDTX7A,AH77IQRYD54XCRMCO7XEAI...  Rishav Gossain,Shashank Mallamraju,Purnendu,gunasekaran desomayananam,Anto RK,Sukrit Basak,Manoj Kumar,Sethuram.S  R1FKOKZ3HHKJBZ,R2WNMZI1EXTA0H,RCA1M3W4RIXUR,R3BKCLL6D7ZLIX,REVSR0ILY3547,R15W5KMQB95IV5,R10PB68FRUHT5V,R3TLCE9JSBU3UP   \n",
+      "684  B07KSMBL2H            AmazonBasics Flexible Premium HDMI Cable (Black, 4K@60Hz, 18Gbps), 3-Foot  Electronics|HomeTheater,TV&Video|Accessories|Cables|HDMICables             219.0         700.0                 0.69     4.4        426972  Flexible, lightweight HDMI cable for connecting media devices to playback display such as HDTVs, projectors, and more|Compatible with Blu-Ray players, computers, Apple TV, Roku, cable, PS4, Xbox O...  AEYJ5I6JZZPOJB6MGWRQOHRQLPSQ,AFY5TVFOMVHGBPBTIJODYDQRZM5Q,AE3O6366WGEQAANKJ76QETTUQQTQ,AEQIJCPWSBCDKUO5VROXXHWX3PPA,AGVIAQK2HQ47P7UVXHW2NBAEU7YQ,AE3D5CJ2GDUP5SQ3AAYMVAGDTX7A,AH77IQRYD54XCRMCO7XEAI...  Rishav Gossain,Shashank Mallamraju,Purnendu,gunasekaran desomayananam,Anto RK,Sukrit Basak,Manoj Kumar,Sethuram.S  R1FKOKZ3HHKJBZ,R2WNMZI1EXTA0H,RCA1M3W4RIXUR,R3BKCLL6D7ZLIX,REVSR0ILY3547,R15W5KMQB95IV5,R10PB68FRUHT5V,R3TLCE9JSBU3UP   \n",
+      "400  B07GQD4K6L                      boAt Bassheads 100 in Ear Wired Earphones with Mic(Furious Red)    Electronics|Headphones,Earbuds&Accessories|Headphones|In-Ear             379.0         999.0                 0.62     4.1        363713  The perfect way to add some style and stand out from the crowd with the boAt BassHeads 100 \"Hawk\" inspired earphones. Impedance 16Î©, Sensitivity (dB) 92db Â±3db, Frequency Response 20Hz-20KHz|The...  AF4MVO4JNFDEPWFKZO62OAJKRIWA,AHVPAXEWPATRASBKHOBI2I3VRLGQ,AE47PRQCNT3YFSESBLAJOH6MSCFA,AGUOSXCR3PDNC2K4X7O7QNRGPAWQ,AH5L6KKTP5ZQSN6GVQB4ZGXOM2DA,AEP5OZFTG32NCC34GCOBFO24W6RA,AEQXLMRCT4ZS65M3ST5YV6...               tarun kumar,mahesh radheshyam tawari,Blackspade,Manoj Kumar,Kartik Sharma,Placeholder,Arun,Yuvashree  R2DD2M5YARW7R2,R2M9ZYNGGV1ZLN,RNWNTRNLSJWSB,R3BJBPNI2XP8HF,RI1FLXH6TFEAJ,R172WRCQLOW97V,R3721R2I1BFETF,R2DH3Z46FTCXQ8   \n",
+      "\n",
+      "                                                                                                                                                                                                review_title                                                                                                                                                                                           review_content                                                                       img_link                                                                                                                     product_link  has_discount  review_length  popularity price_tier   discount_level                                                                                                                                                                                           cleaned_review review_sentiment  sentiment_score  sentiment_numerical main_category      revenue  \n",
+      "47                                                   It's quite good and value for money,Works well,Hdmi cable,Value for money,All good,Gets the job done,Delivery was good,This one was my need to purchase  I am using it for 14 days now. The experience is pretty good as of now. Picture quality is also not bad. Don't expect something out of the world at this price point. But you can go for it if you h...  https://m.media-amazon.com/images/I/41bCxnHksnL._SY300_SX300_QL70_FMwebp_.jpg     https://www.amazon.in/AmazonBasics-High-Speed-HDMI-Cable-Feet/dp/B014I8SSD0/ref=sr_1_51?qid=1672909126&s=electronics&sr=1-51          True            165   1878681.2     Budget  No/Low Discount  i am using it for 14 days now the experience is pretty good as of now picture quality is also not bad dont expect something out of the world at this price point but you can go for it if you have a...         POSITIVE         0.998269                    1   Electronics  131934657.0  \n",
+      "65                                                   It's quite good and value for money,Works well,Hdmi cable,Value for money,All good,Gets the job done,Delivery was good,This one was my need to purchase  I am using it for 14 days now. The experience is pretty good as of now. Picture quality is also not bad. Don't expect something out of the world at this price point. But you can go for it if you h...  https://m.media-amazon.com/images/I/41eJqkFjCRL._SY300_SX300_QL70_FMwebp_.jpg  https://www.amazon.in/AmazonBasics-High-Speed-Cable-2-Pack-Black/dp/B014I8SX4Y/ref=sr_1_73?qid=1672909128&s=electronics&sr=1-73          True            165   1878681.2     Budget  No/Low Discount  i am using it for 14 days now the experience is pretty good as of now picture quality is also not bad dont expect something out of the world at this price point but you can go for it if you have a...         POSITIVE         0.998269                    1   Electronics  131934657.0  \n",
+      "12                                                   It's quite good and value for money,Works well,Hdmi cable,Value for money,All good,Gets the job done,Delivery was good,This one was my need to purchase  I am using it for 14 days now. The experience is pretty good as of now. Picture quality is also not bad. Don't expect something out of the world at this price point. But you can go for it if you h...              https://m.media-amazon.com/images/I/41nPYaWA+ML._SY300_SX300_.jpg     https://www.amazon.in/AmazonBasics-Flexible-HDMI-Cable-3-Foot/dp/B07KSMBL2H/ref=sr_1_14?qid=1672909124&s=electronics&sr=1-14          True            165   1878681.2     Budget  No/Low Discount  i am using it for 14 days now the experience is pretty good as of now picture quality is also not bad dont expect something out of the world at this price point but you can go for it if you have a...         POSITIVE         0.998269                    1   Electronics   93507087.0  \n",
+      "684                                                  It's quite good and value for money,Works well,Hdmi cable,Value for money,All good,Gets the job done,Delivery was good,This one was my need to purchase  I am using it for 14 days now. The experience is pretty good as of now. Picture quality is also not bad. Don't expect something out of the world at this price point. But you can go for it if you h...              https://m.media-amazon.com/images/I/41nPYaWA+ML._SY300_SX300_.jpg     https://www.amazon.in/AmazonBasics-Flexible-HDMI-Cable-3-Foot/dp/B07KSMBL2H/ref=sr_1_107?qid=1672903000&s=computers&sr=1-107          True            165   1878676.8     Budget  No/Low Discount  i am using it for 14 days now the experience is pretty good as of now picture quality is also not bad dont expect something out of the world at this price point but you can go for it if you have a...         POSITIVE         0.998269                    1   Electronics   93506868.0  \n",
+      "400  Best value for money,HEAD PHONE POUCH NOT RECEIVED,Overall good in this pricerange,It's not working in my Phone properly Plz help me in exchange or return, I ll be thankful to you,Worth the money ...  The sound quality of this earphone are really good. The bass part was also good. I only found the noise cancellation was not what I expected. It could be much better. Finally, I can say its a good...     https://m.media-amazon.com/images/I/31qVddHyy5L._SX300_SY300_QL70_ML2_.jpg       https://www.amazon.in/Boat-BassHeads-100-Inspired-Earphones/dp/B07GQD4K6L/ref=sr_1_69?qid=1672895762&s=electronics&sr=1-69          True            138   1491223.3  Mid-Range  No/Low Discount  the sound quality of this earphone are really good the bass part was also good i only found the noise cancellation was not what i expected it could be much better finally i can say its a good valu...         NEGATIVE         0.980990                   -1   Electronics  137847227.0  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1. Sanity check categorical distributions\n",
+    "print(\"\\nPrice Tier distribution:\\n\", df['price_tier'].value_counts())\n",
+    "print(\"\\nDiscount Level distribution:\\n\", df['discount_level'].value_counts())\n",
+    "\n",
+    "# 2. Sanity check numeric ranges\n",
+    "print(\"\\nReview length min/max:\", df['review_length'].min(), df['review_length'].max())\n",
+    "print(\"Popularity min/max:\", df['popularity'].min(), df['popularity'].max())\n",
+    "\n",
+    "# 3. Spot products with missing or extreme values\n",
+    "print(\"\\nProducts with unusually short reviews:\\n\", df[df['review_length'] < 5].head())\n",
+    "print(\"\\nProducts with extreme popularity:\\n\", df.sort_values('popularity', ascending=False).head())\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "5d07e4a4",
    "metadata": {},
